@@ -1,6 +1,9 @@
 DIST rkt-0.8.0.tar.gz 1749853 SHA256 c9eb0126b8ff2f059d7cedaab17ca73dce256f342092c9bf4a7ae20661f2a5aa SHA512 4e2c27fb40cd3d27de062631105db3ea04ed902f48abb647a8e4de249478dd8a145ac0b77fd5b261cc680df1bcaa4067accb8a597def9b3963108e2c1f3d9d5a WHIRLPOOL f65ddd8908ec30cfefa06e60cd4d8cdb2099ab279b6350790eb3e436b88c792efe28cea53569f48d42f6eec682635a4212f16fea9d184e6baa97877a643e1106
+DIST rkt-0.8.1.tar.gz 1799658 SHA256 5e15618424eaff9e943186f17ae535b8e39cb6375f52070baa318c417b1c9bb5 SHA512 2d6ade791868a5caccb3d9fb494e2394c44142e50becc42ca41a85f01b32a0d009e02ae60b3e2df14cf0d324493af24f1fecaa002293896a5da4fb75d1a530fd WHIRLPOOL 717e48708a47aebbdf3bd20670ad518f3c702d937f43d61487f6d72421784732c4313ed5c31032cb7472181a05b8ecde2fb61889360a34e98e03b07b747ad89f
 DIST rkt-pxe-738.1.0.img 151780780 SHA256 805a4c491281553c8927f3dd1a7bec50cca29209d0a7264870e7155d794ecbe6 SHA512 7774cc64dfa874f08f48cba0c15103e9eca86ffd87dcb24f765a9b56074e72f6862a663a4007a0a7dd296740ae91bf4edf7290fa35659b0b1572fe2f5dad3256 WHIRLPOOL 5973a6036d650c576bb0bd365c8c9ea35776501c1fd2baf1d7c00d06496fab35e9c796096ef89b095e7a922e2062dce6c0d1c85cd3101022e0aca84277d18cb9
-EBUILD rkt-0.8.0.ebuild 2343 SHA256 3da5cb66e29c70aeed55d3a569bbb96008e8f908c1bde3db993c2ac3eb541e9d SHA512 0bec02e91a7336dbf805e9b0b5656ab14ba81abe427982fb9f39de5b37e82b20b37028b80f241d2acb63e2f8f0f25a2185171da57583434f737c1b9f99ee4ea0 WHIRLPOOL e379c4d7bc9ff2db23b15b3c313e5f2b8f782762f1fb64cd779c9b93598edb80543278f0e3d8abfa75af7f3f9f8da20458a499ff2ce1d0ae621fbf59d286ba39
-EBUILD rkt-9999.ebuild 2527 SHA256 fbf5ceb93aae11fe6418be0aa2920e386a2941e5d1ed586cb51bfddb67fc4ea6 SHA512 5600701f5601a63e837b2d1da34eb305866cb3e4d5fb8c99757ad5bf8d79e07ff47310b0cac54f4cf76a2a32b3dbfa4849fa89129c8b0ba039a165d7ace96ec4 WHIRLPOOL b2eb40d86f550d3af3713be15a6b6464c576bb35d164ba676cd9bac3745500362677e5da04fe449b01903bee1f261f18691c6f75ac94d28dab016c5a5ac75ac5
-MISC ChangeLog 1851 SHA256 331bf56f80f281bea42f1967bd0456140f2c130fe8f8a69cd374461ffdd315d7 SHA512 c65ba2a5ccab28be3f315b736b1f597f73e22cdaa7fb1eee2289ac495e2d0a896198fe53c13400eb4bfe25441a8d822bc2e2cd1fa5d83bb958c6c3e9c3eae0ac WHIRLPOOL 35058655efc59f266de8608087235769bddddd4b921c0d91dc94d3907bf281fdfaa1e2870c35b647b7883c2edd51b7e7c8e9ec99e4c46fb559f77a4474d316b8
+DIST rkt-pxe-794.1.0.img 185121072 SHA256 d513e27d2412d8fdaa2456786703346f10c24a62480d2036ca5c31b3d5a0df16 SHA512 f36324e9736bb0c533706c45d4146bed2efcb3ee2cb842c3624a62399835808c0df2aef56495a12b30f67c47fd84e93e34b10c57e4aa6d0450402d5e21c6f88c WHIRLPOOL 099851022b11aa29d004bbcef316a7cceeb5efa43f8069cdf1858888e7550f938fd9f9ec53eb63c313b5c1b93b0569f578a50fc5bae28b4d30c451a2ffd2adba
+EBUILD rkt-0.8.0.ebuild 2434 SHA256 dca7c2d07feed6eaa38754f4b0db743ff9950ee58ec49ad0e41219df5bb511c5 SHA512 7ec1f0fdcf86e4380cd5cfd4036a81534d91e20b95d57ff7d7f839f0586a90f8da64280c88c5426d31d7ef1e478de3ec2f7a9ee614b8721802686967b43e3965 WHIRLPOOL fcfd77ca4ff5cd6bdbef25efc76e104617250837616f8c3f0ead8b4d42e8b7823ac90e92e052568e88690b4d28952bc9188aba080f55a0e9d256627a33abe5d7
+EBUILD rkt-0.8.1.ebuild 2407 SHA256 c6918deaf8748fcb7f158f4faf568abc3c57d20d538cf7c1aad8efc4a7f70dcf SHA512 9c3fc452bb81cf4f4ceee21dcc1770375f57b4bc8c041f3597778d8aaa722e24f86ebf246074fa94e1d8e7d030cd4a9a48c8ee010fabb1b73e6ae80dd24d61a7 WHIRLPOOL 7c6ce51cf9792607bb8f9bdb7cafbc8e99247011ce22c059c352bc446cf587e4c28e08d1ece011500c984c44fb6bc5dc46c641ec432e905e459e3a0cb72f291d
+EBUILD rkt-9999.ebuild 2591 SHA256 dc8cbf81b3f6fdecab7009902a294021f925e2384f183f6e4bf812ceee47f36d SHA512 15be16c96bb36a67f4c1e5f6b370851bf48b060ba72f54163167c6939d2ccd5d939813239b90fe37f6559ce9ecab53215086ef9e3e2614f611ff55fc65ed4ca7 WHIRLPOOL a7440397400eb94b533a66b1efb960f417082b0cb274f31340da05b54d3796141e8eafbe872f273371b5ea36cd6e8e4f2f563941d4ee9ad828c941ba690d8e28
+MISC ChangeLog 2042 SHA256 5cd5ccb2622e2e36c3c4c71d70f8d7259913d844c31513297383da11d1f328a8 SHA512 9432c3c98cdc7b3c41f7f3bbe73f3b4afa2e521cb90168ec55f3c6304d9253db64a44c0a6144cb67bdfe93d2e3375ad06892f48bddb3aeda72475f4deeebea41 WHIRLPOOL ba6acf0d2ac588a871870eb30475305311f583e0bd53c1f2ab5a133cdff9ed51ec2d6eca972a9a54b7c1f6ceeffad24acfba358da38411bde7c695720b23325f
 MISC metadata.xml 834 SHA256 e1e716d2037be870a722e03b1da407f1cabcccc9d717c44d714469f1c489833f SHA512 9eb76a0163a202cadc08c17d945bfc5aa530c90f7215542592f893cd8d297d51aa5e6e683dfa2a46cd3615aebee4d80a5f0488e77a9af4d6f91352cdb98a1b65 WHIRLPOOL f9cc37c5e2243b01af2ff82933c6a309430254c20ebb251c1adedbfe70e6dd2c8909c1c6cf455cbb0db5309ad675440585b74a0cce2ca925bf80d818ac9f008f
