@@ -1,3 +1,9 @@
+*rkt-0.8.1 (16 Sep 2015)
+
+  16 Sep 2015; Stefan Junker <mail@stefanjunker.de> +rkt-0.8.1.ebuild,
+  rkt-0.8.0.ebuild, rkt-9999.ebuild:
+  app-emulation/rkt: 0.8.1 version bump and 9999 udpate
+
   27 Aug 2015; Stefan Junker <mail@stefanjunker.de> -files/rkt-metadata.service,
   -files/rkt-metadata.socket, rkt-0.8.0.ebuild, rkt-9999.ebuild:
   app-emulation/rkt: release 0.8 and live ebuild update
